# os

./: .gitignore  Cargo.toml  boot_sect.asm  build.sh  i386-target.json  linker.ld  makefile  read_disk.asm  run.sh
.cargo/: config.toml
boot/: 32_bit_switch.asm  boot_sect.asm  kernel_entry.asm  read_disk.asm
boot/16_bit/: high_mem.asm  print_hex.asm  print_str.asm
boot/32_bit/: gdt.asm
src/: decimal_printable.rs  dyn_array.rs  hex_printable.rs  isr.rs  keyboard_driver.rs  lib.rs  mem.rs  pic.rs  ports.rs  printer.rs  ps2.rs  shell.rs  static_str.rs  sys_event.rs  util.rs  vga.rs
src/interrupt_handlers/: keyboard.rs  mod.rs  null_handler.rs
src/kernel/: idt.rs  isr.rs  kernel.rs  keyboard_driver.rs  mem.rs  mod.rs  pic.rs  ports.rs  pre_boot.rs  process_manager.rs  ps2.rs  vga_driver.rs
src/kernel/acpi/: acpi.rs  iter.rs  mod.rs
src/kernel/interrupt_handlers/: keyboard.rs  mod.rs  null_handler.rs
src/kernel/platform/i386/: context_switch.rs  mod.rs
src/programs/: mod.rs  ps2_cli.rs
