cargo-features = ["panic-immediate-abort"]

[package]
name = "os"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
spin = { version = "0.10.0" }
once_cell_no_std = { version = "0.1.1" }

[profile.release]
opt-level = "z"
debug = "none"
lto = "thin"
panic = "abort"
strip = true
